# open-pointcloud-studio

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: generate-icons.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_server.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/pointcloud/: commands.rs  manager.rs  mod.rs  octree.rs  parser.rs  types.rs
src/components/SettingsDialog/: SettingsDialog.css  SettingsDialog.tsx
src/components/canvas/: PointcloudViewer.tsx
src/components/layout/MenuBar/: MenuBar.tsx
src/components/layout/Ribbon/: Ribbon.css  Ribbon.tsx  RibbonComponents.tsx  RibbonIcons.tsx  useRibbonActions.ts
src/components/panels/: BAG3DPanel.tsx  PointcloudPanel.tsx  ReconstructionProgressDialog.tsx
src/engine/bag3d/: BAG3DClient.ts  CityJSONParser.ts
src/engine/pointcloud/: BrowserPointcloudStore.ts  DXFParser.ts  E57Parser.ts  LASParser.ts  LAZParser.ts  LODController.ts  MeshExporter.ts  OBJParser.ts  OFFParser.ts  PCDParser.ts  PLYParser.ts  PTSParser.ts  PTXParser.ts  PointcloudExporter.ts  PointcloudMaterial.ts  PointcloudParser.ts  PointcloudTransforms.ts  STLParser.ts  SurfaceReconstruction.ts  XYZParser.ts  parsePointcloudWorker.ts  pointcloud.worker.ts  workerProtocol.ts
src/state/: appStore.ts
src/state/slices/: index.ts  pointcloudSlice.ts
src/styles/: globals.css
src/utils/: format.ts
(+1 files in other folders)
